# ghostpaw

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  biome.json  build.mjs  install.sh  package-lock.json  package.json  provision.sh  tsconfig.json  tsx-loader.mjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  desktop.yml  release.yml
desktop/: .gitignore  package-lock.json  package.json
desktop/scripts/: generate-icons.mjs  prepare-sidecar.mjs
desktop/src-tauri/: .gitignore  Cargo.toml  splash.html  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/entitlements/: Entitlements.plist
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: COMMUNICATION.md  COMPETITORS.md  COSTS.md  GHOSTPAW.md  MEMORY.md  SECRETS.md  SETUP.md  SKILLS.md  SOULS.md  WEB.md  WEB_UI.md
docs/code/: ARCHITECTURE.md  CODE.md
docs/features/: CHAT.md  MEMORY.md  PACK.md  README.md  SETTINGS.md  SKILLS.md  SOULS.md  TRAIL.md
docs/ideas/: HAUNT.md  PAWPRINT.md  PAWPRINTS.md  SCENT.md
docs/research/: PROPRIOCEPTIVE_SENSING.md
docs/rewrite/: PAINPOINTS.md  SOCIAL_CRM_CORE.md
scripts/: check_boundaries.mjs
src/: embedded.d.ts  index.ts  integration.test.ts
src/channels/: runtime.test.ts  runtime.ts  (+2 more)
v0/: CONCEPT.md  biome.json  build.mjs  package-lock.json  package.json  tsconfig.json
v2/: .gitignore  AGENTS.md  biome.json  build.mjs  package-lock.json  package.json  tsconfig.json  tsx-loader.mjs
(+2748 files in other folders)
